# algo-trading-platform

./: .gitattributes  .gitignore  COINBASE_MODERNIZATION_PLAN.md  README.md  deploy_trading_backend.sh
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml
alpaca-bot-core/: .gcloudignore  Dockerfile  pom.xml
coinbase-worker/: .gitignore  Cargo.toml  README.md  wrangler.toml
coinbase-worker/src/: auth.rs  capital_tier.rs  client.rs  config.rs  error.rs  lib.rs  strategy.rs  trading.rs  types.rs
coinbase-worker/src/dashboard/: css.rs  html.rs  js.rs  mod.rs
docs/: JUNE3_PDT_PLAN.md  PROFITABILITY_EVALUATION_PLAN.md  PROFIT_OPTIMIZATION_MODERNIZATION.md
test-trade/: .env.template  .gitignore  CheckAllPositions.java  PRODUCTION_CHECKLIST.md  README.md  WEEKEND_CHECKLIST.md  config.properties.live  config.properties.template  config.properties.weekend  cp.txt  git-commit.sh  health-check.sh  monitor_performance.sh  pom.xml  setup-git.sh  start-background.sh  start.sh  stop.sh
test-trade/dashboard/: .env.production  package-lock.json  package.json
test-trade/dashboard/src/: App.tsx  compact_styles.css  config.ts
test-trade/dashboard/src/components/: AIStatus.tsx  ActivityLog.tsx  AdaptiveParameters.tsx  BacktestDashboard.tsx  BotHealthMonitor.tsx  BotStatus.tsx  CorrelationHeatmap.module.css  DataExport.css  LiveBotLog.tsx  MarketAnalysis.tsx  MarketHours.css  MarketHours.tsx  MarketRegime.tsx  MultiTimeframeView.module.css  MultiTimeframeView.tsx  NotificationCenter.css  OperationalEventsPanel.css  OperationalEventsPanel.tsx  OrderHistory.tsx  PerformanceCharts.tsx  Phase2StatusBar.css  Phase2StatusBar.tsx  PositionsTable.tsx  ProcessingPipeline.css  ProfileComparison.css  ProfitTargetsMonitor.tsx  SafetyStatus.css  SafetyStatus.tsx  SmartFeaturesPanel.css  SmartFeaturesPanel.tsx  SystemOverview.tsx  SystemStatus.tsx  TechnicalAnalysis.tsx  ThemeToggle.tsx
test-trade/dashboard/src/services/: WebSocketService.ts
test-trade/dashboard/src/store/: tradingStore.ts
test-trade/src/main/resources/: config.properties.template  logback.xml
trading-backend/: .gcloudignore  .gitignore  Dockerfile  TEST_SUITE.md  analysis.py  build.sh  config.properties.template  deploy_fly.sh  deploy_local.sh  docker-compose.yml  fly.toml  pom.xml
trading-backend/dashboard/: .env.production  Dockerfile  QUICKSTART.md  deploy.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
trading-backend/dashboard/src/: App.css  App.tsx  config.ts
trading-backend/dashboard/src/components/: AIStatus.css  AccountOverview.tsx  ActivityLog.tsx  AdaptiveParameters.module.css  AppErrorBoundary.tsx  AssetRankings.tsx  BacktestDashboard.tsx  BotBehaviorMonitor.tsx  BrokerStatus.tsx  ComponentErrorBoundary.tsx  CorrelationHeatmap.tsx  DataExport.tsx  ErrorBoundary.tsx  GridTradingWidget.tsx  KrakenWidget.tsx  LiveBotLog.tsx  MarketAnalysis.tsx  MarketRegime.tsx  NotificationCenter.tsx  Notifications.tsx  OperationalEventsPanel.tsx  OrderHistory.tsx  PerformanceCharts.css  PerformanceMetrics.tsx  Phase2StatusBar.tsx  Phase3Dashboard.tsx  Phase3Toast.tsx  PositionsTable.tsx  ProcessingIndicator.tsx  ProcessingPipeline.tsx  ProductionMetrics.css  ProductionMetrics.tsx  ProfileComparison.tsx  ProfilePositions.css  ProfilePositions.tsx  ProfitTargetsMonitor.tsx  RebalancingStatus.module.css  RebalancingStatus.tsx  RecentActivitySimple.tsx  SafetyStatus.css  (+10 more)
trading-backend/dashboard/src/hooks/: useWebSocket.ts
trading-backend/dashboard/src/services/: WebSocketService.ts
watchdog-worker/: Cargo.toml  schema.sql  wrangler.toml
watchdog-worker/src/: alpaca.rs  d1.rs  lib.rs
(+279 files in other folders)
